# Ukko-Engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  ScreenSize.hh  Window.cc  Window.hh
src/: '  Board.cc  Board.hh  Engine.cc  Engine.hh  FontLoader.cc  FontLoader.cpp  FontLoader.h  GUI.cc  GUI.cpp  GUI.h  GUI.hh  Game.cc  Game.hh  GameManager.cc  GameManager.hh  Global.cc  Global.hh  Globals.hh  LegalMoves.cc  LegalMoves.hh  MinMax.cc  MinMax.hh  Move.cc  Move.hh  MovePiece.cc  MovePiece.hh  Piece.hh  PieceFactory.cc  PieceFactory.hh  PieceRenderer.cc  PieceRenderer.hh  Pieces.cc  Pieces.hh  Renderer.cc  Renderer.hh  ScreenSize.cc  Settings.cc  Settings.hh  Square.hh  (+16 more)
src/Engine/: Engine.cc  Engine.hh  Init.cc  Init.hh  Initializer.cc  Initializer.hh
